feat: made vanilla CRUD

--- a/index.html
+++ b/index.html
@@ -7,25 +7,22 @@
     <title>Document</title>
 </head>
 <body>
-    <div class ='container'>
+    <div class = 'container'>
+        <h1>To Do App</h1>
         <div>
             <form id='form'>
-                <label for = 'task'>Task:</label>
-                    <input type='text' name='task' id='task'/>
+                <label for ='task'>Task:</label>
+                <input type = 'text' name='task' id = 'task'/>
                 <label for = 'date'>Date:</label>
-                    <input type='date' name = 'date' id ='date'/>
-                <button type='submit'>submit</button>
-                <span id='msg'></span>
+                <input type = 'date' name = 'date' id = 'date'/>
+                <button type ='submit'>submit</button>
+                <span id ='msg'></span>
             </form>
         </div>
-        
         <div>
-            <h2>Your activities here</h2>
-            <div id='posts'>
-
-            </div>
+            <h2></h2>
+            <div id = 'tasks'></div>
         </div>
-        
     </div>
 </body>
 <script src='index.js'></script>
